# SimpleProofOfWork

./: readme.md
development_tool/environment/docker/: docker-compose.yaml
development_tool/environment/docker/service/rust/: dockerfile
development_tool/visual_studio_code_remote_container/docker/: .devcontainer.json
source/backend/lib/: Cargo.toml  mod.rs
source/client/cli/communicator/: Cargo.toml  mod.rs
