[package]
name = "communicator"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "communicator"
path = "./mod.rs"
edition = "2021"
required-features = []

[dependencies]
infrastructure = { path = "./../../../backend/lib", package = "infrastructure", version = "0.1.0", default-features = true, features = [], optional = false }